src/containers/layout/DetailLayout.css
@import "../../App.css";

html {
    scroll-behavior: smooth;
}
.mainProductContent {
    width: 75%;
    margin-top: 8%;
    margin-left: 15%;
    margin-right: 20%;
    position: absolute;
}

.brief {
    width: 75%;

}

.brief .brief_images {
    width: 75%;
    display: inline-block;
}

.brief .thumbnail_div {
    position: absolute;
    margin-left: 3%;
    width: 20%;
    display: inline-block;
}

.brief .thumbnail_div img {
    max-width: 100%;
    max-height: 100%;
}

.brief .thumbnail_div pre {
    font-size: 12px;
    line-height: 1.25;
    color: rgb(0, 0, 0);
    font-family: "Noto Sans", "Noto Sans KR", "Nanum Gothic", 나눔고딕, sans-serif;
}

.detail {
    position: relative;
    margin-top: 40px;
}

.detail.is_fixed {
    padding-top: 67px;
}

.quick_nav_wrap li div a{
    background-color: white;
    color: black;
    padding: 3%;
    display:inline-block;
    width: 100%;
}

.quick_nav_wrap li div a.selected {
    background-color: var(--main-color);
    color: white;
}

.detail .quick_nav_wrap {
    position: relative;
    background-color: white;
}

.detail.is_fixed .quick_nav_wrap {
    position: fixed;
    top: 0;
    width: 75%;
}

.detail ul {
    padding: 0;
    border-top: 1px solid #000;
    list-style: none;
}

.detail ul li {
    width: 25%;
    position: relative;
    display: inline-block;
    cursor: pointer;
}

.detail ul li div {
    text-align: center;
}

.detail div img {
    margin-top: 3%;
    width: 100%;
}

.detail table{
    margin-top: 20px;
    margin-bottom: 20px;
}

.detail #detail_refund_exchange tbody th {
    width:20%;
    padding-left: 4%;
    padding-right: 4%;
    background: #f5f5f5;
}

.detail #detail_refund_exchange tbody td {
    padding-left: 10px;
}

#detailSideDiv {

    z-index: 100;
    width: 20%;
    float: right;
    margin-left: 80%;
    margin-top: 15%;
    position: fixed;
}

#detailSideDiv h3 {
    margin-left: 5%;
}

#detailSideDiv #purchaseButtons {
    font-weight: bold;
    width: 70%;
    margin-left: 5%;
    cursor: pointer;
}

#detailSideDiv .itemNumber{
    width:50%;
    margin-left: 5%;
}

#detailSideDiv .itemNumber div{
    display:inline-block;
    width:50%
}

#detailSideDiv .itemNumber div input{
    margin-left:70%;
    width:100%;
}

#detailSideDiv #itemOptions {
    margin: 5%;
    width: 70%;
}

#detailSideDiv #itemInfo .itemInfoRow {
    margin: 5%;
}

#detailSideDiv #itemInfo .itemInfoRowName {
    width: 50%;
}


#detailSideDiv #itemInfo .itemInfoRow div {
    display: inline-block;
    display: inline;
    float: left;
}

#detailSideDiv .finalPrice{
    margin:5%;
}

#detailSideDiv .finalPrice div{
    display: inline-block;
    display: inline;
    float: left;
    width : 50%;
}

#detailSideDiv #divBuy {
    background-color: var(--main-color);
    color: #fff;
    height: 3%;
    padding: 10px;
    font-size: 16px;
    text-align: center;
}

#detailSideDiv #basketDiv {
    border: 1px solid;
    border-color: var(--main-color);
    height: 3%;
    padding: 10px;
    font-size: 16px;
    text-align: center;
}

